Fix search button on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -74,7 +74,6 @@ nav:after {
     color: #7b7c7c;
     background: #fefefe;
     padding-right: 8px;
-    height: 100%;
     border: 1px solid #cdd3d9;
     border-left: none;
     border-top-right-radius: 4px;
